Bug 74295 - UI: WinXP save dialog is broken if recent file combobox is turned off
Summary: UI: WinXP save dialog is broken if recent file combobox is turned off
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: x86 (IA32) Windows (All)
: high major
Assignee: Aurimas Fišeras
URL:
Whiteboard: target:4.3.1 target:4.2.7
Keywords: patch, regression
: 75415 75483 75682 75695 82367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-01 00:30 UTC by akzo
Modified: 2014-08-09 19:27 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice Draw - Export dialog window (38.82 KB, image/jpg)
2014-02-01 00:30 UTC, akzo
Details
clickable_areas (130.72 KB, image/jpeg)
2014-02-26 22:49 UTC, armand
Details
Options_Setting (50.25 KB, image/jpeg)
2014-02-26 22:57 UTC, armand
Details
Optionen_Einstellung (96.44 KB, image/jpeg)
2014-02-26 22:59 UTC, armand
Details

Note You need to log in before you can comment on or make changes to this bug.
Description akzo 2014-02-01 00:30:49 UTC
Created attachment 93151 [details]
LibreOffice Draw - Export dialog window

Windows XP SP3
The Export dialog window is broken:
- the buttons Save and Cancel are not clickable (when clicking on them, nothing happens. Even the status pressed is not displayed);
- File format drop-down is not visible at all;
- When trying to trick it to write a "filename.png" and press the Enter key, it is displayed the PCT Option dialog window. So, no way available to export to a PNG file.

(I saw this dialog was broken long time ago as reported in 46634)
Comment 1 Julien Nabet 2014-02-01 14:19:17 UTC
akzo: did you install any LO specific extensions?
could you rename your LO directory profile (see https://wiki.documentfoundation.org/UserProfile) and give it a new try?
Comment 2 akzo 2014-02-01 18:10:43 UTC
(In reply to comment #1)
> akzo: did you install any LO specific extensions?
> could you rename your LO directory profile (see
> https://wiki.documentfoundation.org/UserProfile) and give it a new try?

I uninstalled the extensions (all of them) and I renamed the profile folder to let it create a new one, but the same result.

I just discovered the Save As and Open dialog windows have the same problem, but here, if I select a file with the mouse coursor, I can hit Enter to overwrite or open it.

I also enabled/disabled Java with the same result. Any other idea?
Comment 3 Julien Nabet 2014-02-01 18:27:11 UTC
Do you have ApacheOpenOffice or OpenOffice too? If yes, try to uninstall them first.
Then, if it's not the first LO install, could you try the raw method:
- uninstall LO
- remove profile
- remove any remnant directory liek program files\LibreOffice if exists
- clean Windows registry with a free tool (like ccleaner)
- reinstall
There's hardly a chance it works but at least, we'll be sure it's not due to a bug present in a former LO version
Comment 4 akzo 2014-02-01 20:22:20 UTC
There is no OpenOffice installed.
I uninstall it, I cleaned the registry, rebooted, then installed back. The same result. Could be a problem if it is not installed in its "default" location? I mean, I have it on the second partition in a custom folder. But I checked the Windows' Enviroment Variables > Path and this location is registered there.

Is there any log or another way to trace somehow the problem?
Reading 46634 I saw that was a QT problem, but that was on Linux. What else to check here?
Comment 5 Julien Nabet 2014-02-01 20:47:23 UTC
Why not indeed?
Sorry, I don't know how to retrieve more information on Windows (since it's not a crash)
I don't have more idea, so I put it back to UNCONFIRMED.
Comment 6 Jean-Baptiste Faure 2014-02-02 00:42:57 UTC
(In reply to comment #4)
> There is no OpenOffice installed.
> I uninstall it, I cleaned the registry, rebooted, then installed back. The
> same result. Could be a problem if it is not installed in its "default"
> location? I mean, I have it on the second partition in a custom folder. But
> I checked the Windows' Enviroment Variables > Path and this location is
> registered there.

You need to try if you want to know: uninstall LO and install back in its default location.

Best regards. JBF
Comment 7 akzo 2014-02-04 01:07:34 UTC
> You need to try if you want to know: uninstall LO and install back in its
> default location.
> 
> Best regards. JBF

Well, I tried (only to eliminate this possibility). As expected, the same result. For now, I'm back to 4.1.4 waiting for a solution.
Comment 8 Julien Nabet 2014-02-04 06:35:04 UTC
Thank you Akzo for your feedback, I put it back to UNCONFIRMED
Comment 9 Jorendc 2014-02-13 22:33:06 UTC
Lets mark this one as 'major high' for now. Looks like it is not reproduced yet, and there are no related bug reports as far I can see. Looks like very system-related setup.

Kind regards,
Joren
Comment 10 Maxim Monastirsky 2014-02-25 10:23:47 UTC
*** Bug 75483 has been marked as a duplicate of this bug. ***
Comment 11 Maxim Monastirsky 2014-02-25 10:26:36 UTC
Confirmed by Bug 75483.
Comment 12 Maxim Monastirsky 2014-02-25 10:39:59 UTC
*** Bug 75415 has been marked as a duplicate of this bug. ***
Comment 13 armand 2014-02-26 22:49:31 UTC
Created attachment 94790 [details]
clickable_areas
Comment 14 armand 2014-02-26 22:56:17 UTC
Hi 

Can't really investigate with such terrible freezes. I have reinstalled LO 4.2.1.1 to see whether I can find the reason why my XP was freezing all the time with the recent LO releases. Unfortunately no luck. Some feedback:

The buttons “Save” and “Cancel” are actually click-able but only at the upper and lower edge of the button. Clicking inside the button or the left and right border fails. (screenshot save_as_LO_v4.2.1.1.jpg)

The only way to get rid of this problem with the unclickable fields and buttons is to enable the “Open/Save dialogs” setting in Options.  (screenshot options.jpg)

There were tons of errors when monitoring LO's soffice.bin and writer.exe but rather harmless, none of them was suspicious enough in my opinion. 


Hallo Bernd, es scheint ein allgemeines Problem zu sein das nur vereinzelt auftaucht. Wie auch immer, Du kannst das Problem umgehen indem Du unter Option eine Einstellung änderst (siehe screenshot Einstellungen.jpg) 

I'm out
Comment 15 armand 2014-02-26 22:57:44 UTC
Created attachment 94791 [details]
Options_Setting
Comment 16 armand 2014-02-26 22:59:21 UTC
Created attachment 94792 [details]
Optionen_Einstellung
Comment 17 Urmas 2014-03-02 20:36:35 UTC
*** Bug 75682 has been marked as a duplicate of this bug. ***
Comment 18 Urmas 2014-03-02 20:37:53 UTC
Can someone reproduce it with a clean VM XP environment?
Comment 19 Maxim Monastirsky 2014-03-03 12:38:58 UTC
*** Bug 75695 has been marked as a duplicate of this bug. ***
Comment 20 rxhughes 2014-03-04 22:52:03 UTC
If I use the "Run As" and use the original 'administrator' a/c from Windows XP installation then all is OK. Also if I login as the 'administrator', again all is AOK. However if I am logged in with an a/c that is only a membe of the 'administrators group' then the problem returns. hope this is of some help. PS also turned of DEP but this did not effect the outcome.
Comment 21 rxhughes 2014-03-05 23:46:11 UTC
OK heres maybe the real issue. Yesterday I posted that it was probably to do with not being logged in as a proper XP administrator - Today after creating and deleting profiles and other messing about., i discovered that a registry setting, set by TweakUIXP is definately causing this issue with the save export etc dialog box. In TweakUIXP, there is an option under 'Common Dialogs' called 'Remember Previously-used filenames' which when toggled OFF (removal of tick from box) causes the nuisance broken dialog box. Perhaps someone can confirm??? Im running Windows XP SP3.
Comment 22 Urmas 2014-03-06 02:53:55 UTC
Confirmed.
Comment 23 Matt K. 2014-03-15 13:53:16 UTC
Confirmed (again)

I use TweakUI and have the "remember recently used documents" option (un-)set...

Found out when I started using LO Writer, but it is doing the same thing in any LO app I've tried it in...

I have enabled LO dialogs option in the LO options as a workaround & all seems well...

Tools → Options → LibreOffice → General
☑ Use LibreOffice dialogs (enabled)
Press OK
Comment 24 Aurimas Fišeras 2014-07-19 09:36:41 UTC
Windows Server 2003 is also affected. Tested 4.3.0.3 and 4.4.0.0 alpha0 Winx86@42 - problem still exists.

Checked the "File Open" dialog with inspect.exe from Windows SDK and got such results with 4.2.5.2:
Name:	"File name:"
Role:	editable text (0x2A)
Location:	{l:261, t:447, w:242, h:16}

Name:	"Files of type:"
Role:	combo box (0x2E)
Location:	{l:-32704, t:473, w:246, h:21}

Name:	"Version:"
Role:	combo box (0x2E)
Location:	{l:-32704, t:502, w:246, h:21}

Name:	"Read-only"
Role:	check box (0x2C)
Location:	{l:-32704, t:528, w:246, h:21}

Notice, how the left position (l:) is wrapped around for the "invisible" controls.

When in 4.1.6:
Name:	"File name:"
Role:	editable text (0x2A)
Location:	{l:229, t:356, w:242, h:16}

Name:	"Files of type:"
Role:	combo box (0x2E)
Location:	{l:227, t:382, w:246, h:21}

Name:	"Version:"
Role:	combo box (0x2E)
Location:	{l:227, t:411, w:246, h:21}

Name:	"Read-only"
Role:	check box (0x2C)
Location:	{l:227, t:437, w:246, h:21}

I checked the commits http://cgit.freedesktop.org/libreoffice/core/log/fpicker/source
and noticed this one http://cgit.freedesktop.org/libreoffice/core/commit/fpicker/source/win32?id=e9fd9c25269abe171e5f693a8c70b33ab5a01c85

I am guaranteed that this is the cause, because setting the option "Remember previously-used documents" in TweakUI changes the File name from an editable text (edt1) to the combo box (cmb13).

The above commit should be [partially-]reverted since edt1 can still be used in WinXP/Win2k3 when "Remember previously-used documents" is unset. See: http://msdn.microsoft.com/en-us/library/windows/desktop/ms646960(v=vs.85).aspx
Comment 25 Aurimas Fišeras 2014-07-21 08:35:18 UTC
Submitted a revert and a different fix for the original problem to gerrit:
https://gerrit.libreoffice.org/#/c/10429/
https://gerrit.libreoffice.org/#/c/10430/
Comment 26 Julien Nabet 2014-07-21 08:47:32 UTC
Aurimas: Thank you to not assign someone without asking him/her before.
Comment 27 Aurimas Fišeras 2014-07-21 08:55:28 UTC
(In reply to comment #26)
> Aurimas: Thank you to not assign someone without asking him/her before.
Sorry, I assigned you because you were the author of the original commit to be reverted.
Comment 28 Julien Nabet 2014-07-21 08:59:35 UTC
Oups! Sorry Aurimas, I've just checked git history, you're completely right!
Sorry again.
Comment 29 Commit Notification 2014-07-21 21:15:37 UTC
Aurimas Fišeras committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6466d0fec06e095bc596593357846802a24bb4af&h=libreoffice-4-3

fdo#74295 win32 fpicker: correctly set the default file name


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2014-07-21 21:17:24 UTC
Aurimas Fišeras committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a72abae4863c5f60c96b5fda2dcad8f46551fbd&h=libreoffice-4-2

fdo#74295 win32 fpicker: correctly set the default file name


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 31 Aurimas Fišeras 2014-07-22 05:52:08 UTC
Tested with:
Version: 4.4.0.0.alpha0+
Build ID: 9e970303ddcccd9e33641f8f00bbc4c739a58cd7
Everything works correctly.
Comment 32 Maxim Monastirsky 2014-08-09 19:27:36 UTC
*** Bug 82367 has been marked as a duplicate of this bug. ***