fdo#74295 win32 fpicker: correctly set the default file name

Revert "Cleaning: remove use of old edt1 from dlg.h (Windows)"
This reverts commit e9fd9c25269abe171e5f693a8c70b33ab5a01c85.

Reviewed-on: https://gerrit.libreoffice.org/10429
Reviewed-on: https://gerrit.libreoffice.org/10430
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit a37d99eb176d0a302f92af287cc0d19ba2663bbc)
(cherry picked from commit bb4ffcdf9a3682f13f0145055f81921a764c36f3)
Signed-off-by: Andras Timar <andras.timar@collabora.com>